docs/purple-slack-demo/force-app/main/default/objects/GenAIImportRequest__c/GenAIImportRequest__c.object-meta.xml
<CustomObject>
    <description>Audit record for GenAI Data Import requests orchestrated by Agentforce Operations (AFO/Regrello).</description>
    <label>GenAI Import Request</label>
    <nameField>
        <displayFormat>GIR-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GenAI Import Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>