docs/purple-slack-demo/force-app/main/default/objects/GenAIImportRequest__c/fields/AFO_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>AFO_Task_Id__c</fullName>
    <description>UUID of the AFO task currently associated with this request (most recently active).</description>
    <label>AFO Task Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>