docs/purple-slack-demo/force-app/main/default/objects/GenAIImportRequest__c/fields/AFO_Workflow_Id__c.field-meta.xml
<CustomField>
    <fullName>AFO_Workflow_Id__c</fullName>
    <description>UUID of the live AFO workflow instance.</description>
    <label>AFO Workflow Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>