docs/purple-slack-demo/force-app/main/default/objects/GenAIImportRequest__c/fields/Decided_At__c.field-meta.xml
<CustomField>
    <fullName>Decided_At__c</fullName>
    <description>Timestamp of the approve/reject decision.</description>
    <label>Decided At</label>
    <type>DateTime</type>
</CustomField>