docs/purple-slack-demo/force-app/main/default/objects/GenAIImportRequest__c/fields/Decided_By__c.field-meta.xml
<CustomField>
    <fullName>Decided_By__c</fullName>
    <description>Email of the manager who approved or rejected the import in Slack.</description>
    <label>Decided By</label>
    <type>Email</type>
</CustomField>