docs/purple-slack-demo/force-app/main/default/objects/GenAIImportRequest__c/fields/Import_Id__c.field-meta.xml
<CustomField>
    <fullName>Import_Id__c</fullName>
    <description>External identifier from the GenAI Data Import workflow (AFO).</description>
    <externalId>true</externalId>
    <label>Import Id</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>