docs/purple-slack-demo/force-app/main/default/objects/GenAIImportRequest__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <description>Email of the user that initiated the GenAI import in AFO.</description>
    <label>Requested By</label>
    <type>Email</type>
</CustomField>