docs/purple-slack-demo/force-app/main/default/objects/GenAIImportRequest__c/fields/Validation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Validation_Notes__c</fullName>
    <description>Free-text notes returned by the AFO validation agent.</description>
    <label>Validation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>